# server-template

./: .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  README.md  cargo-generate.toml  fix-readme.rhai  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: commitlint.yml  deny.yml  javascript-lint.yml  lint.yml  machete.yml  pull_request_checks.yml  rust-lint.yml  test.yml
crates/api-router/: Cargo.toml
crates/lib-api-data/: Cargo.toml
crates/lib-api-data/src/: export.rs  response.rs
crates/lib-api-data/tests/: test_export.rs
crates/lib-api-router/: Cargo.toml
crates/lib-web/: Cargo.toml  build.rs  package-lock.json  package.json  vite.config.ts  vitest.config.ts
crates/lib-web-router/: Cargo.toml
crates/lib-web-router/src/: lib.rs
crates/lib-web/src/: response_types.ts
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/web/: .eslintrc.cjs  Cargo.toml  build.rs  package-lock.json  package.json  vite.config.ts  vitest.config.ts
crates/web-router/: Cargo.toml
crates/web-router/src/: lib.rs
crates/web/src/: lib.rs
crates/web/src/router/: index.ts
crates/web/tests/: test_web_files.rs
