[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
api-router = { path = "crates/api-router" }
web = { path = "crates/web" }
web-router = { path = "crates/web-router" }

axum = "0.7.1"
camino = "1.1"
itertools = "0.12"
tokio = { version = "1.34.0", features = ["full"] }
