[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
lib-api-router = { path = "crates/lib-api-router" }
lib-web = { path = "crates/lib-web" }
lib-web-router = { path = "crates/lib-web-router" }

axum = "0.7.1"
camino = "1.1"
itertools = "0.12"
tokio = { version = "1.34.0", features = ["full"] }
